--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Never Ending test...</h1>
+  <h1>Hello this is the new line</h1>  
 </body>
 </html>
